Version 1.4
  - Fixed several memory leaks
  - Added --dirsfirst option to list directories first.
  - Fixed formatting error when unable to open directories.
  - Fixed bug in parse_dir_colors().
  - Changed -I to also ignore directories.
  - Added --nolinks command to turn off hyperlinks with the HTML output.
  - Fixed several memory leaks in listdir().
  - Some additional code cleanup in listdir().
  - Some systems may define TRUE/FALSE, so don't create the enums for TRUE
    and FALSE if that's the case.
  - Fixed over-allocation bug in read_dir().
  - Added crude beginnings of color output for HTML via CSS (Ted Tiberio
    ttiberio@rochester.rr.com).
  - Fixed buffer overflow problem in dircolors parsing.
  - Fixed recursive symlink detection.
  - Added --inodes and --device options.
  - Added --noreport option.

Version 1.3
  - Fixed long pathname problem by dynamically allocating the path.
  - Added recursive symlink detection.
  - Added --help and --version options.
  - When -C is used and LS_COLORS is undefined, tree uses a default color
    scheme (thus -C always forces color output now).
  - Added -S to show ASCII tree lines (Gerald Scheidl)
  - Made tree more portable (Guido Socher and others)

  Following options curtsey of Francesc Rocher:
  - Added -o <filename> to redirect the output.
  - Added -H <baseHRef> to print the tree in HTML format.
  - Added -L to set the maximum level of directories to print.
  - Added -R to recursively reestart the search at the level given by `-L'
    option (adding as well `-o 00Tree.html').

Version 1.2
  - Added -D to print the date of the last modification.
  - Added -t option to sort by last modification time (ala ls -t).
  - Added -I <pattern>, simular to the -P option except tree does not print
    those files which match the pattern.
  - Made tree print non-printable characters in filenames in standard unix
    carrot notation.
  - Added -N option to make tree print filenames without any processing.